# drf-api-permissions-postgres

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
blogapi_project/: asgi.py  settings.py  urls.py  wsgi.py
drf_api_permissions_postgres/: asgi.py  settings.py  urls.py  wsgi.py
snacks/: admin.py  models.py  serializers.py  views.py
snacks/migrations/: 0001_initial.py
tests/: test_drf_permissions_postgres.py
