[tool.poetry]
name = "drf-api"
version = "0.1.0"
description = ""
authors = ["FIRAS AHMAD HASAN <x.firashasan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
asgiref = "^3.4.1"
pytz = "^2021.1"
sqlparse = "^0.4.1"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
